<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_home_background">

    <TextView
        android:id="@+id/match_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/teal_700"
        android:backgroundTint="@color/yelow"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:text="@string/matchname"/>


    <TextView
        android:id="@+id/team_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_weight="4"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/team1name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_name" />


    <TextView
        android:id="@+id/team_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/team2name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toEndOf="@+id/team_name_1"
        app:layout_constraintTop_toBottomOf="@+id/match_name"
        app:layout_goneMarginEnd="50dp" />

    <TextView
        android:id="@+id/set_team1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:text="@string/pointzero"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_name_1" />

    <View
        android:id="@+id/separation_horizontale"
        android:layout_width="60dp"
        android:layout_height="15dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/separation_verticale"
        app:layout_constraintEnd_toStartOf="@+id/set_team2"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/set_team1" />

    <TextView
        android:id="@+id/set_team2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="90dp"
        android:textStyle="bold"
        android:text="@string/pointzero"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_name_2" />

    <View
        android:id="@+id/separation_verticale"
        android:layout_width="10dp"
        android:layout_height="383dp"
        android:layout_marginBottom="52dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_undo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/score_team1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="68dp"

        android:gravity="center"
        android:text="@string/pointzero"
        android:textColor="@color/white"

        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_team1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_team1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="144dp"
        android:hint="@string/hintpoint"
        android:shadowRadius="5.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_team2"

        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="144dp"
        android:hint="@string/hintpoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/score_team2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:text="@string/pointzero"
        android:textColor="@color/white"

        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_team2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/match_back_home"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="5.6dp"
        android:background="@drawable/ic_home_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/match_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_undo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/curentset"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_name" />

    <TextView
        android:id="@+id/counter_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/setone"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_undo"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@color/red"
        android:hint="@string/undo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
